[gd_scene load_steps=3 format=3 uid="uid://d4fukuonyshth"]

[ext_resource type="Script" path="res://scenes/main/controls.gd" id="1_vog6v"]
[ext_resource type="Script" path="res://scenes/main/world_gen_display.gd" id="2_uucuc"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vog6v")

[node name="HeightMapRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_uucuc")

[node name="TempMapRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RainMapRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BiomeMapRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UIParent" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 1.0
grow_vertical = 2

[node name="ButtonParent" type="VBoxContainer" parent="UIParent"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Button" type="Button" parent="UIParent/ButtonParent"]
layout_mode = 2
text = "Generate"
